# django-technical-assessment

./: .gitignore  README.md  logbook-all-phases.md  logbook-diagrams.md  pyproject.toml  pytest.ini  redis.sh
djangotutorial/: .env.example
djangotutorial/mysite/: celery.py  settings.py  urls.py
djangotutorial/polls/: api_urls.py  api_views.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
djangotutorial/polls/management/commands/: seed_polls.py
djangotutorial/polls/migrations/: 0001_initial.py  0002_alter_question_pub_date_uservote.py  0003_choice_unique_choice_text_per_question.py  0004_auditlog.py
djangotutorial/polls/static/polls/: api_frontend.css  api_frontend.js
djangotutorial/polls/templates/polls/: api_frontend.html  detail.html  index.html  results.html
djangotutorial/polls/tests/: test_api.py  test_audit.py  test_models.py  test_tasks.py  test_views.py
